--- a/Resources/EarlyBirdHack.plist
+++ b/Resources/EarlyBirdHack.plist
@@ -208,6 +208,20 @@ You shouldn't set this too high.</string>
         <key>PostNotification</key>
         <string>com.PS.EarlyBirdHack.settingschanged</string>
       </dict>
+        <dict>
+        <key>cell</key>
+        <string>PSSwitchCell</string>
+        <key>default</key>
+        <false/>
+        <key>defaults</key>
+        <string>com.PS.EarlyBirdHack</string>
+        <key>key</key>
+        <string>hideMT2</string>
+        <key>label</key>
+        <string>Hide My Town 2</string>
+        <key>PostNotification</key>
+        <string>com.PS.EarlyBirdHack.settingschanged</string>
+      </dict>
       <dict>
         <key>cell</key>
         <string>PSGroupCell</string>
