--- a/Resources/EarlyBirdHack.plist
+++ b/Resources/EarlyBirdHack.plist
@@ -222,6 +222,20 @@ You shouldn't set this too high.</string>
         <key>PostNotification</key>
         <string>com.PS.EarlyBirdHack.settingschanged</string>
       </dict>
+       <dict>
+        <key>cell</key>
+        <string>PSSwitchCell</string>
+        <key>default</key>
+        <false/>
+        <key>defaults</key>
+        <string>com.PS.EarlyBirdHack</string>
+        <key>key</key>
+        <string>noPopUp</string>
+        <key>label</key>
+        <string>Hide Ads</string>
+        <key>PostNotification</key>
+        <string>com.PS.EarlyBirdHack.settingschanged</string>
+      </dict>
       <dict>
         <key>cell</key>
         <string>PSGroupCell</string>
