--- a/EarlyBirdHack.plist
+++ b/EarlyBirdHack.plist
@@ -1,1 +1,1 @@
-{ Filter = { Bundles = ( "com.booyah.birdswithfriends" ); }; }
+{ Filter = { Bundles = ( "com.booyah.birdswithfriends", "com.booyah.birdswithfriendsHD" ); }; }
